# aact-cockpit

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  sentinel-findings.jsonl  sentinel-findings.md
.github/workflows/: assurance.yml
analyses/: af_anticoag_nma.json  cardiometabolic.json  dm_mace_nma.json  hfref_mortality_nma.json  melanoma_os_nma.json  nsclc_os_nma.json
docs/: index.html
docs/ctgov-condition-hiddenness-map/: assurance.json  ctgov-condition-hiddenness-map-capsule.html  ctgov-condition-hiddenness-map.body.txt  ctgov-condition-hiddenness-map.json
docs/ctgov-probable-act-fdaaa-debt/: assurance.json  ctgov-probable-act-fdaaa-debt-capsule.html  ctgov-probable-act-fdaaa-debt.body.txt  ctgov-probable-act-fdaaa-debt.json
docs/ctgov-publication-index-gap/: assurance.json  ctgov-publication-index-gap-capsule.html  (+2 more)
extractor_bridge/: README.md  extract_meta.py
scripts/: batch_capsules.py  build_index.py  build_warehouse.py  extract_effects.py  make_atlas.py  make_audit.py  make_capsule.py  make_nma.py  make_tsa.py  r_validate.R  r_validate_nma.R  serve.py  verify_docs.py
templates/: aact_atlas_capsule.html  aact_audit_capsule.html  aact_nma_capsule.html  aact_pairwise_capsule.html  aact_tsa_capsule.html
tests/: conftest.py  test_atlas.py  test_audit.py  test_capsule.py  test_cockpit.py  test_contract.py  test_determinism.py  test_effects.py  test_guards.py  test_ingest.py  test_nma.py  test_paths.py  test_provenance.py  test_query_integration.py  test_tsa.py  test_vendor_parity.py  test_workbook_append.py
(+129 files in other folders)
