[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aact-cockpit"
version = "0.1.0"
description = "Local DuckDB-backed cockpit for large-scale ClinicalTrials.gov/AACT analysis that emits self-auditing e156 capsules."
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests/browser needs a live server + Chrome (Selenium) — run it manually, not in unit CI
addopts = "-q --ignore=tests/browser"
